--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,12 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- fontes -->
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Cinzel:wght@400;500;600&family=IM+Fell+DW+Pica+SC&family=Marcellus+SC&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Cinzel:wght@400;500;600&family=IM+Fell+DW+Pica+SC&family=Marcellus+SC&display=swap"
+      rel="stylesheet"
+    />
 
-
-    <title>React App</title>
+    <title>Mythical Cards</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
