--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Você consegue construir o melhor deck?"
-    />
+    <meta name="description" content="Você consegue construir o melhor deck?" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- fontes -->
@@ -17,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>Mythical Cards</title>
+    <title>Cartas Jogo - Beta</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
