--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>Cartas Jogo - Beta</title>
+    <title>Cartas Jogo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
